package de.pruefbit.kata;

interface NotificationService {

    void sendGreeting(String address, String message);
}
