@startuml

title __KATABIRTHDAYGREETING Class Diagram__\n

  namespace de.pruefbit.birthdaygreeting {
    class de.pruefbit.birthdaygreeting.BirthdayGreeting {
    }
  }
  

  namespace de.pruefbit.birthdaygreeting {
    class de.pruefbit.birthdaygreeting.Friend {
    }
  }
  

  namespace de.pruefbit.birthdaygreeting {
    interface de.pruefbit.birthdaygreeting.FriendsDirectory {
    }
  }
  

  namespace de.pruefbit.birthdaygreeting {
    class de.pruefbit.birthdaygreeting.Greeting {
    }
  }
  

  namespace de.pruefbit.birthdaygreeting {
    class de.pruefbit.birthdaygreeting.GreetingContext {
    }
  }
  

  namespace de.pruefbit.birthdaygreeting {
    interface de.pruefbit.birthdaygreeting.NotificationService {
    }
  }
  

  namespace de.pruefbit.birthdaygreeting {
    enum PropertyNames {
    }
  }
  

  de.pruefbit.birthdaygreeting.BirthdayGreeting .up.|> java.lang.Runnable
  de.pruefbit.birthdaygreeting.BirthdayGreeting o-- de.pruefbit.birthdaygreeting.FriendsDirectory : friendsDirectory
  de.pruefbit.birthdaygreeting.BirthdayGreeting o-- de.pruefbit.birthdaygreeting.NotificationService : notificationService
  de.pruefbit.birthdaygreeting.GreetingContext o-- de.pruefbit.birthdaygreeting.FriendsDirectory : database
  de.pruefbit.birthdaygreeting.GreetingContext o-- de.pruefbit.birthdaygreeting.NotificationService : notificationService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
